--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,11 +12,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/express-fileupload": "^1.4.1",
 		"bcrypt": "^5.1.0",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-fileupload": "^1.4.0",
 		"mongoose": "^7.4.1",
 		"morgan": "^1.10.0"
 	},
@@ -25,9 +28,9 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/morgan": "^1.9.4",
+		"@types/pug": "^2.0.6",
+		"@types/validator": "^13.9.0",
 		"ts-node": "^10.9.1",
-		"ts-node-dev": "^2.0.0",
-        "@types/pug": "^2.0.6",
-        "@types/validator": "^13.9.0"
+		"ts-node-dev": "^2.0.0"
 	}
 }
