--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "back-end",
+	"type": "commonjs",
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.ts",
 	"scripts": {
 		"dev": "ts-node-dev --respawn --pretty --transpile-only src/server.ts",
 		"build": "tsc --build tsconfig.json",
-		"start": "node dist/server.js",
+		"start": "ts-node dist/server.js",
 		"vercel-build": "echo hello"
 	},
 	"author": "",
