--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "ts-node-dev --respawn --pretty --transpile-only src/server.ts",
 		"build": "tsc --build tsconfig.json",
-		"start": "ts-node dist/server.js",
+		"start": "node dist/server.js",
 		"vercel-build": "echo hello"
 	},
 	"author": "",
