--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,7 +22,8 @@
 		"express": "^4.18.2",
 		"express-fileupload": "^1.4.0",
 		"mongoose": "^7.4.1",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
