--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "framer-motion": "^10.15.2",
+    "moment": "^2.29.4",
     "next": "13.4.13",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
